@@ -7,6 +7,8 @@
  * Renamed mplayer_forced_version to mplayer_user_supplied_version. That
    version will be used only if smplayer can't parse the mplayer version from
    the mplayer output.
+ * Now if the mplayer version can't be parsed a dialog will pop up asking the
+   user for the mplayer version.
 
 (2008-01-26)
  * Now it's possible to zoom out on the video image.
